# dust

./: .gitattributes  .gitignore  .lfsconfig  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  README.md  WORKSPACE  rust-toolchain.toml  test.oct
.cargo/: config.toml
.github-unused/: dependabot.yml
.github-unused/workflows/: rust.yml
assets/: .gitattributes  auto_exposure.comp  auto_exposure_avg.comp  castle.vox  compile.bat  compile.sh  dda.rint  dda.rint.spv  final_gather.rchit  final_gather.rgen  final_gather.rmiss  hit.rchit  hit.rint  miss.rmiss  monu9.vox  photon.rchit  photon.rgen  photon.rint  photon.rmiss  plain.rchit  plain.rchit.spv  primary.rgen  primary.rgen.spv  restir_spatial.comp  rough.rint  shadow.rgen  shadow.rmiss  sky.rmiss  sky.rmiss.spv  standard.glsl  surfel.rchit  surfel.rgen  surfel.rmiss  teapot.vox  tone_map.comp
assets/asvgf/: temporal.comp
assets/region/: r.0.0.mca  r.0.1.mca  r.1.0.mca  r.1.1.mca
assets/shaders/: auto_exposure.comp  auto_exposure.playout  auto_exposure_avg.comp  final_gather.rgen  final_gather.rmiss  shadow.rgen  shadow.rmiss  standard.glsl  surfel.rchit  tone_map.comp  tone_map.playout
assets/shaders/final_gather/: ambient_occlusion.rchit  ambient_occlusion.rgen  ambient_occlusion.rint  ambient_occlusion.rmiss  final_gather.rchit  final_gather.rgen  final_gather.rmiss  nee.rmiss  rough.rint
assets/shaders/headers/: camera.glsl  color.glsl  header.glsl  layout.glsl  layout.playout  normal.glsl  nrd.glsl  sbt.glsl  (+5 more)
crates/bevy_dust/: Cargo.toml
crates/bevy_dust/src/: lib.rs  voxel.rs
crates/block_alloc/: Cargo.toml
crates/block_alloc/src/: discrete.rs  integrated.rs  lib.rs
crates/core/: Cargo.toml
crates/editor/: Cargo.toml
crates/generate/: Cargo.toml
crates/gfx_alloc/: Cargo.toml
crates/gfx_block_alloc/: Cargo.toml
crates/gfx_block_alloc/src/: arena.rs  discrete.rs  integrated.rs  lib.rs  utils.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs  sentry.rs
crates/pbr/: Cargo.toml
crates/pbr/src/: camera.rs  gizmos.rs  lib.rs  pipeline.rs
crates/plugin/: Cargo.toml  README.md
crates/plugin/src/: create.rs  lib.rs
crates/render/: Cargo.toml  build.rs
crates/render-metal/: Cargo.toml  Package.swift  build.rs
crates/render-metal/Sources/: Renderer.swift  Test.swift
crates/render-metal/src/: lib.rs
crates/render/src/: accel_struct.rs  blas.rs  camera.rs  camera_projection.rs  cleanup.rs  compile.sh  deferred_task.rs  depth.vert  descriptor_pool.rs  device_info.rs  ecs.rs  frame.rs  geometry.rs  lib.rs  light.rs  loader.rs  material.rs  material_repo.rs  noise.rs  pipeline.rs  pipeline2.rs  projection.rs  ray.comp  ray.frag  ray.frag.spv  ray.vert  ray.vert.spv  raytracer.rs  render_resources.rs  renderable.rs  renderer.rs  resource.rs  sbt.rs  shader.rs  shared_buffer.rs  swapchain.rs  tlas.rs  utils.rs  voxel.rs
crates/render/src/accel_struct/: blas.rs  instance_vec.rs  mod.rs  tlas.rs
crates/render/src/attributes/: integer.rs  mod.rs
crates/render/src/block_alloc/: discrete.rs  integrated.rs  mod.rs  utils.rs
crates/render/src/pipeline/: auto_exposure.rs  auto_exposure_avg.comp  builder.rs  cache.rs  compute.rs  manager.rs  mod.rs  nrd.rs  plugin.rs  reblur.rs  sky.rs  standard.rs  svgf.rs  tone_map.comp  tone_mapping.rs
crates/render/src/render_asset/: bindless.rs  buffer.rs  dynamic.rs  mod.rs  static.rs
crates/render/src/shader/: glsl.rs  mod.rs  spirv.rs
crates/render/src/shaders/: ray.comp  ray.glsl
crates/rhyolite/: Cargo.toml
crates/rhyolite/src/: allocator.rs  debug.rs  device.rs  dho.rs  error_handler.rs  instance.rs  lib.rs  physical_device.rs  sampler.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs
crates/rhyolite/src/accel_struct/: blas.rs  build.rs  mod.rs
crates/rhyolite/src/commands/: mod.rs  pool.rs
crates/rhyolite/src/descriptor/: layout.rs  mod.rs  pool.rs
crates/rhyolite/src/future/: block.rs  exec.rs  ext.rs  mod.rs  state.rs
crates/rhyolite/src/pipeline/: cache.rs  compute.rs  layout.rs  mod.rs  rtx.rs  sbt.rs
crates/rhyolite/src/queue/: compile.rs  exec.rs  mod.rs  router.rs
crates/rhyolite/src/resources/: buffer.rs  copy.rs  image.rs  image_view.rs  managed_buffer_vec.rs  mod.rs  staging_ring_buffer.rs
crates/rhyolite/src/utils/: either.rs  format.rs  merge_iter.rs  merge_ranges.rs  mod.rs  retainer.rs  send_marker.rs  unsized_vec.rs
crates/rhyolite_bevy/: Cargo.toml
crates/rhyolite_bevy/examples/: filter.comp  filter.rs  simple.rs
crates/rhyolite_bevy/src/: image.rs  lib.rs  queue.rs  swapchain.rs  types.rs
crates/rhyolite_bevy/src/loaders/: mod.rs  png.rs
crates/rhyolite_macro/: Cargo.toml
crates/rhyolite_macro/src/: commands.rs  commands_join.rs  glsl.rs  gpu.rs  lib.rs  push_constant.rs  set_layout.rs  transformer.rs
crates/sentry/: Cargo.toml
crates/sentry/src/: lib.rs
crates/svo/: Cargo.toml
crates/terrain-gen/: Cargo.toml
crates/terrain-gen/src/: lib.rs  partition.rs  simulation.rs  topology.rs
crates/terrain-gen/src/topology/: disk.rs
crates/terrain-gen/test/: main.rs
crates/utils/: Cargo.toml
crates/vdb/: Cargo.toml
crates/vdb/src/: accessor.rs  bitmask.rs  immutable.rs  lib.rs  parry.rs  pool.rs  traversal.rs  tree.rs
crates/vdb/src/node/: internal.rs  leaf.rs  mod.rs  root.rs
crates/vox/: Cargo.toml  README.md
crates/vox/src/: attributes.rs  blas.rs  builder.rs  collector.rs  geometry.rs  lib.rs  loader.rs  main.rs  material.rs  palette.rs  physics.rs  resource.rs  transformer.rs
dust.xcodeproj/: project.pbxproj
examples/: castle.rs  geometry.rs  snake.rs
formats/explicit_aabbs/: Cargo.toml
formats/explicit_aabbs/src/: lib.rs  loader.rs  material.rs
formats/explicit_primitives/: Cargo.toml
formats/vdb/: Cargo.toml
formats/vdb/src/: accessor.rs  bitmask.rs  geometry.rs  lib.rs  pool.rs  tree.rs
formats/vdb/src/node/: internal.rs  leaf.rs  mod.rs  root.rs
formats/vox/: Cargo.toml
formats/vox/src/: collector.rs  geometry.rs  lib.rs  material.rs  palette.rs  vox_loader.rs
src/: fps_counter.rs  lib.rs  main.rs
src/fly_camera/: cam2d.rs  mod.rs  util.rs
(+62 files in other folders)
