[package]
name = "dust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/*",
]


[dependencies]
bevy = { version = "0.14.0-rc.3", default-features = false, features = ["bevy_scene"] }
rhyolite = { path = "../rhyolite" }
dust-vox = { path = "./crates/vox" }
dust-pbr = { path = "./crates/pbr" }
dust-log = { path = "./crates/log" }
smooth-bevy-cameras = { git = "https://github.com/Neo-Zhixing/smooth-bevy-cameras", rev = "73c42f9714e55a03fe36730df2fd37c0ffebd260" }

[dependencies.bevy_rapier3d]
git = "https://github.com/dimforge/bevy_rapier"
rev = "56f98706751cb5cf74cb82e2b73749282c8ed5ee"
default-features = false
features = ["dim3", "headless"]

[patch.crates-io]
bevy = { path = "../bevy" }
ash = { git = "https://github.com/Neo-Zhixing/ash.git", branch = "meta" }
