[package]
name = "dust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/*",
]


[dependencies]
bevy = { version = "0.14.0-rc.3", default-features = false, features = ["bevy_scene"] }
rhyolite = { path = "../rhyolite" }
dust-vox = { path = "./crates/vox" }
dust-vdb = { path = "./crates/vdb" }
dust-pbr = { path = "./crates/pbr" }
dust-log = { path = "./crates/log" }

[dependencies.bevy_rapier3d]
git = "https://github.com/dimforge/bevy_rapier"
rev = "56f98706751cb5cf74cb82e2b73749282c8ed5ee"
default-features = false
features = ["dim3", "headless"]

[patch.crates-io]
bevy = { path = "../bevy" }
ash = { git = "https://github.com/Neo-Zhixing/ash.git", branch = "meta" }
parry3d = { path = "../parry/crates/parry3d" }
rapier3d = { path = "../rapier/crates/rapier3d" }

[patch."https://github.com/dimforge/bevy_rapier"]
bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d"}
