[package]
name = "bevy_dust"
version = "0.1.0"
authors = ["Zhixing Zhang <me@neoto.xin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
glam = { version = "0.13", features = ["transform-types"] }
dust-core = { path = "../core" }

[target.'cfg(not(any(target_os = "macos", target_os = "ios")))'.dependencies]
dust-render = { path = "../render" }
