[package]
name = "dust-plugin"
version = "0.1.0"
edition = "2018"
authors = [
    "Zhixing Zhang <me@neoto.xin>",
    "iMplode nZ <rg@youxplode.com>"
]
categories = ["game-engines", "graphics", "rendering"]
keywords = ["dust-engine", "plugin"]

[dependencies]


[features]
default = ["create"]
create = []
load = []
server = []

