[package]
name = "dust-plugin"
version = "0.1.0"
edition = "2018"
authors = [
    "Zhixing Zhang <me@neoto.xin>",
    "iMplode nZ <rg@youxplode.com>"
]
categories = ["game-engines", "graphics", "rendering"]
keywords = ["dust-engine", "plugin"]

[dependencies]
cargo_metadata = "0.13.1"
serde_json = "1.0.64"

[features]
default = ["create"]
create = []
load = []
server = []
