[package]
name = "dust-render-metal"
version = "0.1.0"
authors = ["Zhixing Zhang <account@neoto.xin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "*"
dust-core = { path = "../core" }
glam = { version = "0.13", features = ["transform-types"] }

[build-dependencies]
serde = "1.0"
serde_json = "1.0"
