[package]
name = "dust-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhyolite-bevy = { path = "../rhyolite_bevy" }
rhyolite = { path = "../rhyolite" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy.git", rev = "0181d40d83c7e12a3e54846c60b7bff3142cbe0a", features = ["multi-threaded"] }
bevy_app = { git = "https://github.com/bevyengine/bevy.git", rev = "0181d40d83c7e12a3e54846c60b7bff3142cbe0a" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git", rev = "0181d40d83c7e12a3e54846c60b7bff3142cbe0a", features = ["multi-threaded"] }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "0181d40d83c7e12a3e54846c60b7bff3142cbe0a" }
bevy_hierarchy = { git = "https://github.com/bevyengine/bevy.git", rev = "0181d40d83c7e12a3e54846c60b7bff3142cbe0a" }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "0181d40d83c7e12a3e54846c60b7bff3142cbe0a" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "0181d40d83c7e12a3e54846c60b7bff3142cbe0a" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", rev = "0181d40d83c7e12a3e54846c60b7bff3142cbe0a" }
bevy_time = { git = "https://github.com/bevyengine/bevy.git", rev = "0181d40d83c7e12a3e54846c60b7bff3142cbe0a" }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git", rev = "0181d40d83c7e12a3e54846c60b7bff3142cbe0a" }
anyhow = "1"
once_cell = "1.17"
futures-lite = "1.11"
crossbeam-channel = "^0.5"
pin-project = "1"
tracing = "0.1"
crevice = { git = "https://github.com/LPGhatguy/crevice", features = ["glam"] }
rand = "0.8"
arrayvec = "0.7"

nrd-sys = "0.2"
bytemuck = "1.13"

# Processor dependencies
shaderc = { version = "0.8", optional = true }
playout = { git = "https://github.com/dust-engine/playout", optional = true }
playout_macro = { git = "https://github.com/dust-engine/playout" }

[features]
default = ["glsl"]
glsl = ["shaderc", "playout"]
