[package]
name = "dust-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhyolite-bevy = { path = "../rhyolite_bevy" }
rhyolite = { path = "../rhyolite" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f", features = ["multi-threaded"] }
bevy_app = { git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f", features = ["multi-threaded", "asset_processor"] }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f" }
bevy_hierarchy = { git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f" }
bevy_transform = { git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f" }
bevy_time = { git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f" }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git", rev = "2c7eab1b4c4ec6c533b6b609d5ddf8a7282f2c4f" }
thiserror = "1"
once_cell = "1.17"
futures-lite = "1.11"
crossbeam-channel = "^0.5"
pin-project = "1"
tracing = "0.1"
crevice = { git = "https://github.com/LPGhatguy/crevice", features = ["glam"] }
rand = "0.8"
arrayvec = "0.7"

nrd-sys = "0.2"
bytemuck = "1.13"

# Processor dependencies
shaderc = { version = "0.8", optional = true }
playout = { git = "https://github.com/dust-engine/playout", rev = "e3658f015a013bbbcf8d15b04280979463f578da", optional = true }
playout_macro = { git = "https://github.com/dust-engine/playout", rev = "e3658f015a013bbbcf8d15b04280979463f578da" }

[features]
default = ["glsl"]
glsl = ["shaderc", "playout"]
