[package]
name = "rhyolite-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

shaderc = { version = "0.8", optional = true }
spirq = { version = "0.6", optional = true }
ash = { version = "0.37", optional = true }

[features]
default = ["glsl"]
glsl = ["shaderc", "spirq", "ash"]
