[package]
name = "dust-sentry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
sentry = "^0.31"
sentry-tracing = "^0.31"
tracing-subscriber = "^0.3"
bevy_app = { git = "https://github.com/bevyengine/bevy.git", rev = "527d3a5885daa4b43df7054f7787dad47f06135d" }
rhyolite-bevy = { path = "../rhyolite_bevy" }
rhyolite = { path = "../rhyolite" }


aftermath-rs = { version = "0.1.2", optional = true }


[features]
aftermath = ["aftermath-rs"]
