[package]
name = "dust-terrain-gen"
version = "0.1.0"
edition = "2018"
authors = [
    "Zhixing Zhang <me@neoto.xin>",
    "iMplode nZ <rg@youxplode.com>"
]
categories = ["game-engines", "graphics", "rendering"]
keywords = ["dust-engine", "terrain-generation"]

[dependencies]
glam = "0.15.2"
smallvec = "1.6.1"
derive-new = "0.5.9"
voronoice = "0.0.1"
rand = { version = "0.8.3", features = ["small_rng"] }
