[package]
name = "dust-vdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "^0.27"
fxhash = "0.2"
nohash = "0.2.0"
bevy = { version = "0.14.0-dev", default-features = false, features = ["bevy_asset"] }

[dev-dependencies]
rand = "0.8.5"
