[package]
name = "dust-vdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "^0.27"
fxhash = "0.2"
nohash = "0.2.0"
bevy = { version = "0.14.0-rc.3", default-features = false, features = ["bevy_asset"] }
parry3d = "0.15"

[dev-dependencies]
rand = "0.8.5"
