[package]
name = "dust-vdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
physics = ["parry3d", "nalgebra"]

[dependencies]
glam = "^0.27"
fxhash = "0.2"
nohash = "0.2.0"
bevy = { version = "0.14.0", default-features = false, features = ["bevy_asset"] }
parry3d = { version = "0.17", optional = true }
nalgebra = { version = "*", features = ["convert-glam027"], optional = true }
rhyolite = { path = "../../../rhyolite" }

[dev-dependencies]
rand = "0.8.5"
