[package]
name = "dust-vox"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = ["bevy_scene"] }
rhyolite = { path = "../../../rhyolite" }
dust-vdb = { path = "../vdb" }
dust-pbr = { path = "../pbr" }
dot_vox = "5.1"
thiserror = "1"
rayon = "1.10"
rhyolite_rtx = { path = "../../../rhyolite/crates/rtx" }

[dependencies.bevy_rapier3d]
git = "https://github.com/dimforge/bevy_rapier"
rev = "56f98706751cb5cf74cb82e2b73749282c8ed5ee"
default-features = false
features = ["dim3", "headless"]
