[package]
name = "dust_format_explicit_aabbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dust_render = { path = "../../crates/render" }
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_asset = { git = "https://github.com/bevyengine/bevy" }
dustash = { path = "../../../dustash" }
ash = "0.37"
anyhow = "1.0"
