[package]
name = "dust_vdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { git = "https://github.com/bitshifter/glam-rs" }
fxhash = "0.2"
nohash = "0.2.0"
dust_render = { path = "../../crates/render" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy" }
bevy_asset = { git = "https://github.com/bevyengine/bevy" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }

dustash = { path = "../../../dustash" }

[dev-dependencies]
rand = "0.8.5"
